# arena-evaluation

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .releaserc.js  .terraform.lock.hcl  CHANGELOG.md  README.md  main.tf  pyproject.toml
.github/workflows/: continuous_integration.yml  releases.yml  tests.yml
deployment/offline-inference/: instance-user-data.sh  main.tf
scripts/: compare_t1_data.py  fetch-arena-data.sh  fetch-arena.sh  instance-user-data.sh  prepare-user-area.sh  run-streaming-server.sh
src/arena_missions/: __init__.py  load_challenges.py
src/arena_missions/builders/: __init__.py  challenge_builder.py  mission_builder.py  required_objects_builder.py
src/arena_missions/challenges/: ambiguous_pickup.py  breaking_things.py  clean_dirty_plate.py  fill_object_in_sink.py  objects_in_containers.py  operate_carrot_maker.py  operate_microwave.py  operate_printer.py  operate_time_machine.py  pickup_from_printer.py  pickup_stack.py  place_stack.py  using_coffee_unmaker.py  using_color_changer.py
src/arena_missions/constants/: arena.py  object_id_to_readable_name.json
src/arena_missions/structures/: __init__.py  cdf.py  high_level_key.py  mission.py  object_id.py  required_object.py  state_condition.py  task_goal.py
src/arena_wrapper/: __init__.py  arena_controller.py  arena_orchestrator.py  arena_request_builder.py  constants.py  exceptions.py  server.py
src/arena_wrapper/enums/: object_output_wrapper.py
src/arena_wrapper/util/: __init__.py  depth.py  lock.py  metrics.py  object_class_decoder.py  scene_utils.py  scene_yaml_edit.py  transforms.py  trials.py
src/simbot_missions/: __init__.py  challenge_validator.py  structures.py  validate_cdf.py
src/simbot_offline_inference/: __main__.py  _version.py  arena_action_builder.py  arena_evaluator.py  challenge_validator.py  controller.py  evaluator.py  inference_controller.py  metrics.py  orchestrators.py  prepare_trajectory_data.py  progress.py  run.py  run_background_services.py  settings.py  structures.py  web_backend.py  xserver.py
src/simbot_offline_inference/challenges/: __init__.py  challenge_validator.py
src/simbot_offline_inference/commands/: __init__.py  generate_trajectories.py  run_background_services.py  run_evaluation.py  run_their_evaluation.py  run_trajectories_in_arena.py  validate_cdfs.py
src/simbot_offline_inference/metrics/: __init__.py  evaluation.py  wandb.py  wandb_trajectory.py
src/simbot_offline_inference/structures/: __init__.py  mission.py  mission_trajectory.py
storage/cdfs/: 01 (Make_Cereal).json  01.json  02 (Scan_Coffee_Beans_And_Mug).json  03 (Get_A_Broken_Record).json  04 (BrokenTrohpy).json  05 (Throw a BullsEye).json  06 (DisinfectTheTerminals).json  07 (AssembleLaser).json  09 (Beans1).json  13 (CoffeeToRobotics).json  14 (DinoBurger).json  15 (DinoPie).json  16 (DinoSandwich).json  18 (DefrostCake01).json  19 (ManagerCoffee1).json  20 (ManagerCoffee_GravPad).json  22 (ManagerCoffee2).json  23 (ReheatLaser3).json  24 (BrokenMonitor_Manager).json  27 (AngryNSad).json  28 (MakeTAMHappyDark).json  29 (HappyTAM).json  31 (ReceptionCandyFetch).json  34 (BrokenDeskFan).json  36 (Scan2).json  38 (SadTamProto).json  40.json  41 (CerealAndCoffee-1Star).json  43 (ColorMugs).json  44 (ColorDesk).json  45 (ColorOfficeSupplies).json  47 (LaserRepair).json  49 (ColorCoded).json  50 (GreenApples).json  51 (MissingFood).json  52 (RedMugOnRedDesk).json  54 (CarrotTime).json  55 (Clive).json  56 (CarrotDart).json  58 (KennyTime).json  (+5 more)
storage/cdfs/T3/: 00.json  01.json
storage/cdfs/from_arena_repo/: 08.json
storage/cdfs/from_arena_source/: 02 (Scan_Coffee_Beans_And_Mug).json  03 (Get_A_Broken_Record).json  04 (BrokenTrohpy).json  05 (Throw a BullsEye).json  06 (DisinfectTheTerminals).json  07 (AssembleLaser).json  08 (IceColdSoda).json  09 (Beans1).json  10 (Beans2).json  11 (CoffeeIntoBeans).json  12 (Beans3).json  13 (CoffeeToRobotics).json  (+57 more)
tests/: test_generated_missions.py
(+50 files in other folders)
